array.island.Island.scala.error
Compilation error:
Island:3: error: not found: value liste
  liste = num
  ^Island:5: error: not found: value x
  x = num.size-1
  ^Island:7: error: not found: value niveaux
  niveaux = 0
  ^Island:9: error: not found: value x
  for (i <- 1 to x){
                 ^Island:12: error: not found: value niveaux
      niveaux+=1;
      ^